# meta-content-moderation-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  create_app_sig.txt  fetch_real_data.py  generate_data.py  inference.py  models.py  openapi.json  openenv.yaml  pyproject.toml  requirements.txt  routes.txt  swagger.md
data/: ad_copies.json  image_descriptions.json  posts.json  whatsapp_threads.json
data/policies/: ad_policies.json  community_standards.json
scripts/: validate_graders.py
server/: app.py  dataset.py  env.py  graders.py  models.py
server/tasks/: task_ad_policy.py  task_multi_label.py  task_single_label.py  task_thread_hard.py
tests/: test_api.py
