[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-content-moderation-env"
version = "0.1.0"
description = "Meta OpenEnv Moderation Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "faker>=25.0.0",
    "datasets>=4.8.4",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["server"]
